Jag har lagt till z-index med hover samt transistions som rotate, scale och "all 1s". Fixat sido texten. Har lagt till position: relative till chrome bug? Har problem med att fixera höjden då man ändrar storlek.

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,24 +1,43 @@
-/*font-family: 'Shadows Into Light';*/
-
-body {
-    background-image: url(pics/blue_white_stripes.jpg);
+/* Hm... använder jag google font på fel sätt? */
+html {
+    font-family: 'Shadows Into Light';
 }
 
 #container {
     max-width: 1200px;
-    width: 100%;
-    height: 900px;
+    width: 100%; height: 1500px;
+    margin: 0 auto;
     padding: 50px;
 }
 
-.images a {
-    width: 200px;
+#images a {
+    width: 250px;
     float: left;
     margin: 10px;
     padding: 10px 10px 30px 10px;
     background-color: white;
+    z-index: 1;     
+    position: relative;
+    transform: rotate(5deg);
+    box-shadow: 14px 14px 20px;
+    transition: all 1s;
 }
 
-.images a img {
+#images a img {
     width: 100%;
+}
+
+#images a:hover {
+    transform: rotate(0deg) scale(1.5);
+    z-index: 2;
+}
+
+#side {
+    float: right;
+    height: 300px;
+    font-size: 10px;
+}
+
+#groupTwo {
+    float: left;
 }
